force-app/main/default/objects/Student_Program_Subplan__c/Student_Program_Subplan__c.object-meta.xml
<CustomObject>
    <description>Subplans related to the Student Program Plans</description>
    <label>Student Program Subplan</label>
    <nameField>
        <displayFormat>{000000}-{YYYY}-{MM}-{DD}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program Subplans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>