force-app/main/default/objects/Student_Program_Subplan__c/fields/Student_Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Student_Program_Plan__c</fullName>
    <description>Referencing the associated student program plan</description>
    <label>Student Program Plan</label>
    <referenceTo>Student_Program_Plan__c</referenceTo>
    <relationshipLabel>Student Program Subplans</relationshipLabel>
    <relationshipName>Student_Sub_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>