force-app/main/default/objects/Student_Program_Subplan__c/fields/Subplan_code__c.field-meta.xml
<CustomField>
    <fullName>Subplan_code__c</fullName>
    <description>Data sourced from PS_ACAD_SUBPLAN.ACAD_SUB_PLAN</description>
    <label>Subplan Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>