force-app/main/default/objects/Student_Program_Subplan__c/fields/Subplan_Description__c.field-meta.xml
<CustomField>
    <fullName>Subplan_Description__c</fullName>
    <description>Data sourced from PS_ACAD_SUBPLN_TBL.DESCR</description>
    <label>Subplan Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>