force-app/main/default/objects/Student_Program_Subplan__c/fields/Subplan_Transcript_Description__c.field-meta.xml
<CustomField>
    <fullName>Subplan_Transcript_Description__c</fullName>
    <description>Data sourced from PS_ACAD_SUBPLN_TBL.TRNSCR_DESCR</description>
    <label>Subplan Transcript Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>