force-app/main/default/objects/Student_Program_Subplan__c/fields/Subplan_Type__c.field-meta.xml
<CustomField>
    <fullName>Subplan_Type__c</fullName>
    <description>Data sourced from PS_ACAD_SUBPLN_TBL.ACAD_SUBPLAN_TYPE</description>
    <label>Subplan Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>